--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <img src="img/profile.jpg" width="50%" class="rounded-circle img-thumbnail">
         <br><br>
         <h1 class="display-4">Hello! Welcome!</h1>
-        <p class="lead">I'm Aisyah Putri Ramadhani, get to know me and this is my portofolio</p>
+        <p class="lead">I'm Aisyah Putri Ramadhani, get to know me and this is my portfolio</p>
         </div>
         </div>
 
